# slack-vacation

./: Cargo.toml  README.md
src/: main.rs
