[package]
name = "slack-vacation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.10"
reqwest = "0.11.9"
serde = {version = "1.0.134",features = ["derive"]}
serde_json = "1.0.75"
tokio = { version = "1", features = ["full"] }
